sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:17: error: ';' expected but 'while' found.
		} while (t==false)
                  ^