sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
	var v=0
	var t=false
	var n=0
	for (i<- 1 to getNombreValeurs()-1) {
		v=getValeur(i) 
		 while (t==false) {
			n=i-1
			if (v<getValeur(n)) {
				echange(n,n+1)
				t=true
			} else {
				n=n-1
			}
			
		} while (t==false)
	}
}
